--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "chalk": "^5.0.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
