IDs added as variables

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,16 @@
+#general
 TOKEN='<BOT TOKEN>'
 PREFIX='<BOT PREFIX>'
+
+#channels
+LOGS_ID='<ID>'
+SUGESTIE_BOT_ID='<ID>'
+DIARY_ID='<ID>'
+SUGESTIE_ID='<ID>'
+OGOLNY_ID='<ID>'
+
+#roles
+BOTDEV_ROLE_ID='<ID>'
+ADMIN_ROLE_ID='<ID>'
+MUTE_ROLE_ID='<ID>'
+SUGESTIE_ROLE_ID='<ID>'
