scam deleting turned off

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ PREFIX='<BOT PREFIX>'
 LOGS_ID='<ID>'
 SUGESTIE_BOT_ID='<ID>'
 DIARY_ID='<ID>'
+BOT_LOGS_ID='<ID>'
 SUGESTIE_ID='<ID>'
 OGOLNY_ID='<ID>'
 
