alarm command added

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 #general
-TOKEN='<BOT TOKEN>'
+TOKEN=<BOT TOKEN>
 PREFIX='<BOT PREFIX>'
 
 #channels
@@ -14,5 +14,6 @@ LICZENIE_ID='<ID>'
 #roles
 BOTDEV_ROLE_ID='<ID>'
 ADMIN_ROLE_ID='<ID>'
+MOD_ROLE_ID='<ID>'
 MUTE_ROLE_ID='<ID>'
 SUGESTIE_ROLE_ID='<ID>'
