quotes module added and counting repaired and optimized

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ BOT_LOGS_ID='<ID>'
 SUGESTIE_ID='<ID>'
 OGOLNY_ID='<ID>'
 LICZENIE_ID='<ID>'
+BOT_CYTATY_ID='<ID>'
 
 #roles
 BOTDEV_ROLE_ID='<ID>'
